tests/compile-fail/Rule_2_1.rs
#[forbid(clippy_pedantic)]
#[forbid(clippy)]
#[forbid(warnings)]

fn main() {
    let res: u16;
    return;
    res = 3; //~ ERROR unreachable statement
}
